--- a/CarRental/CarRentalDesktop/MainWindow.xaml
+++ b/CarRental/CarRentalDesktop/MainWindow.xaml
@@ -6,133 +6,15 @@
         xmlns:viewModel="clr-namespace:CarRentalDesktop.ViewModel"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance viewModel:CarsViewModel}"
-        Title="CarRentalClient" Height="450" Width="800">
-    <Window.Resources>
-        <SolidColorBrush x:Key="ListBox.Static.Background" Color="#FFFFFFFF" />
-        <SolidColorBrush x:Key="ListBox.Static.Border" Color="#FFABADB3" />
-        <SolidColorBrush x:Key="ListBox.Disabled.Background" Color="#FFFFFFFF" />
-        <SolidColorBrush x:Key="ListBox.Disabled.Border" Color="#FFD9D9D9" />
-        <Style x:Key="myborder" TargetType="{x:Type ListBox}">
-            <Setter Property="Background" Value="{StaticResource ListBox.Static.Background}" />
-            <Setter Property="BorderBrush" Value="{StaticResource ListBox.Static.Border}" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
-            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
-            <Setter Property="ScrollViewer.CanContentScroll" Value="true" />
-            <Setter Property="ScrollViewer.PanningMode" Value="Both" />
-            <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ListBox}">
-                        <Border x:Name="Bd" CornerRadius="7" Background="{TemplateBinding Background}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                BorderBrush="{TemplateBinding BorderBrush}" Padding="1" SnapsToDevicePixels="true">
-                            <ScrollViewer Focusable="false" Padding="{TemplateBinding Padding}">
-                                <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                            </ScrollViewer>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Background" TargetName="Bd"
-                                        Value="{StaticResource ListBox.Disabled.Background}" />
-                                <Setter Property="BorderBrush" TargetName="Bd"
-                                        Value="{StaticResource ListBox.Disabled.Border}" />
-                            </Trigger>
-                            <MultiTrigger>
-                                <MultiTrigger.Conditions>
-                                    <Condition Property="IsGrouping" Value="true" />
-                                    <Condition Property="VirtualizingPanel.IsVirtualizingWhenGrouping" Value="false" />
-                                </MultiTrigger.Conditions>
-                                <Setter Property="ScrollViewer.CanContentScroll" Value="false" />
-                            </MultiTrigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="FocusVisual">
-            <Setter Property="Control.Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Rectangle Margin="2" StrokeDashArray="1 2" SnapsToDevicePixels="true" StrokeThickness="1"
-                                   Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD" />
-        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070" />
-        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD" />
-        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1" />
-        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6" />
-        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B" />
-        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4" />
-        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5" />
-        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383" />
-        <Style x:Key="MyButtonStyle" TargetType="{x:Type Button}">
-            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
-            <Setter Property="Background" Value="{StaticResource Button.Static.Background}" />
-            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}" />
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="Padding" Value="1" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border x:Name="border" CornerRadius="9" Background="{TemplateBinding Background}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
-                            <ContentPresenter x:Name="contentPresenter" Focusable="False"
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                              Margin="{TemplateBinding Padding}" RecognizesAccessKey="True"
-                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsDefaulted" Value="true">
-                                <Setter Property="BorderBrush" TargetName="border"
-                                        Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-                            </Trigger>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter Property="Background" TargetName="border"
-                                        Value="{StaticResource Button.MouseOver.Background}" />
-                                <Setter Property="BorderBrush" TargetName="border"
-                                        Value="{StaticResource Button.MouseOver.Border}" />
-                            </Trigger>
-                            <Trigger Property="IsPressed" Value="true">
-                                <Setter Property="Background" TargetName="border"
-                                        Value="{StaticResource Button.Pressed.Background}" />
-                                <Setter Property="BorderBrush" TargetName="border"
-                                        Value="{StaticResource Button.Pressed.Border}" />
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Background" TargetName="border"
-                                        Value="{StaticResource Button.Disabled.Background}" />
-                                <Setter Property="BorderBrush" TargetName="border"
-                                        Value="{StaticResource Button.Disabled.Border}" />
-                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter"
-                                        Value="{StaticResource Button.Disabled.Foreground}" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </Window.Resources>
+        Title="CarRentalClient">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <ListBox Grid.Column="0" Width="500" Height="400"
-                 Style="{DynamicResource myborder}"
+        <ListBox Grid.Column="0" 
                  ItemsSource="{Binding Path =Cars}"
-                 SelectedItem="{Binding SelectedCar, Mode = TwoWay}"
-                 ScrollViewer.VerticalScrollBarVisibility="Auto">
+                 SelectedItem="{Binding SelectedCar, Mode = TwoWay}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -145,24 +27,49 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <StackPanel Grid.Column="1">
-            <TextBlock Text="Номер" />
-            <TextBox Text="{Binding Path= Number, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Text="Модель" />
-            <TextBox Text="{Binding Model, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Text="Цвет" />
-            <TextBox Text="{Binding Color, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Text="Год выпуска" />
-            <TextBox Text="{Binding DateRelease, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBlock Text="Цена аренды за день" />
-            <TextBox Text="{Binding DayPrice, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-
-
-        </StackPanel>
-        <Button Command="{Binding Path=AddNew}" Content="Add" Margin="15,201,152,191" Grid.Column="1" />
-        <Button Command="{Binding Path=Remove}" CommandParameter="{Binding SelectedCar}" Content="Remove"
-                Margin="134,201,18,191" Grid.Column="1" />
-        <Button Command="{Binding Clear}" CommandParameter="{Binding SelectedCar}" Content="Clear" Width="100"
-                Grid.Column="1" Margin="15,264,152,119" />
+        <Grid Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Grid.Column="0" ColumnSpan="2" >
+                <StackPanel Orientation="Vertical" 
+                            Margin="5">
+                <TextBlock Text="Номер" />
+                <TextBox  Text="{Binding Path= Number, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Text="Модель" />
+                <TextBox Text="{Binding Model, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Text="Цвет" />
+                <TextBox Text="{Binding Color, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Text="Год выпуска" />
+                <TextBox Text="{Binding DateRelease, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Text="Цена аренды за день" />
+                <TextBox Text="{Binding DayPrice, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                </StackPanel>
+            </Grid>
+            <Button Grid.Row="1"
+                    Grid.Column="0"  
+                    Height="30"
+                    Command="{Binding Path=AddNew}"
+                    Content="Add"  />
+            <Button Grid.Row="1" 
+                    Grid.Column="1" 
+                    Height="30"
+                    Command="{Binding Path=Remove}" 
+                    CommandParameter="{Binding SelectedCar}" 
+                    Content="Remove"/>
+            <Button Grid.Row="2" 
+                    Grid.Column="0"  
+                    Grid.ColumnSpan="2"
+                    Height="30"
+                    Command="{Binding Clear}" 
+                    CommandParameter="{Binding SelectedCar}" 
+                    Content="Clear" />
+        </Grid>
     </Grid>
 </Window>
