--- a/CarRental/CarRentalDesktop/MainWindow.xaml
+++ b/CarRental/CarRentalDesktop/MainWindow.xaml
@@ -41,15 +41,15 @@
                 <StackPanel Orientation="Vertical" 
                             Margin="5">
                 <TextBlock Text="Номер" />
-                <TextBox  Text="{Binding Path= Number, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox  Text="{Binding Path= Number, UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock Text="Модель" />
-                <TextBox Text="{Binding Model, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Text="{Binding Model,  UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock Text="Цвет" />
-                <TextBox Text="{Binding Color, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Text="{Binding Color,  UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock Text="Год выпуска" />
-                <TextBox Text="{Binding DateRelease, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Text="{Binding DateRelease,  UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock Text="Цена аренды за день" />
-                <TextBox Text="{Binding DayPrice, Mode = TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Text="{Binding DayPrice,  UpdateSourceTrigger=PropertyChanged}" />
                 </StackPanel>
             </Grid>
             <Button Grid.Row="1"
