добавила вкладки cars, clients, Managers
!разобраться с маппером

--- a/CarRental/CarRentalDesktop/MainWindow.xaml
+++ b/CarRental/CarRentalDesktop/MainWindow.xaml
@@ -5,63 +5,182 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModel="clr-namespace:CarRentalDesktop.ViewModel"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance viewModel:CarsViewModel}"
+        d:DataContext="{d:DesignInstance viewModel:MainViewModel}"
         Title="CarRentalClient">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <ListBox Grid.Column="0" 
+    <TabControl >
+        <TabItem Header="Cars" DataContext="{Binding Children[0]}" >
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <ListBox Grid.Column="0" 
                  ItemsSource="{Binding Path =Cars}"
                  SelectedItem="{Binding SelectedCar, Mode = TwoWay}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Padding="0,0,2,0" Text="{Binding Path = Number }" />
-                        <TextBlock Padding="0,0,2,0" Text="{Binding Path = Model  }" />
-                        <TextBlock Padding="0,0,2,0" Text="{Binding Path = Color }" />
-                        <TextBlock Padding="0,0,2,0" Text="{Binding Path = DateRelease}" />
-                        <TextBlock Padding="0,0,2,0" Text="{Binding Path = DayPrice }" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <Grid Grid.Column="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0" Grid.Column="0" ColumnSpan="2" >
-                <StackPanel Orientation="Vertical" 
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Padding="0,0,2,0" Text="{Binding Path = Number }" />
+                            <TextBlock Padding="0,0,2,0" Text="{Binding Path = Model  }" />
+                            <TextBlock Padding="0,0,2,0" Text="{Binding Path = Color }" />
+                            <TextBlock Padding="0,0,2,0" Text="{Binding Path = DateRelease}" />
+                            <TextBlock Padding="0,0,2,0" Text="{Binding Path = DayPrice }" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0" Grid.Column="0" ColumnSpan="2" >
+                    <StackPanel Orientation="Vertical" 
                             Margin="5">
-                <TextBlock Text="Номер" />
-                <TextBox  Text="{Binding Path= Number, UpdateSourceTrigger=PropertyChanged, Mode = TwoWay}" />
-                <TextBlock Text="Модель" />
-                <TextBox Text="{Binding Model,  UpdateSourceTrigger=PropertyChanged}" />
-                <TextBlock Text="Цвет" />
-                <TextBox Text="{Binding Color,  UpdateSourceTrigger=PropertyChanged}" />
-                <TextBlock Text="Год выпуска" />
-                <TextBox Text="{Binding DateRelease,  UpdateSourceTrigger=PropertyChanged}" />
-                <TextBlock Text="Цена аренды за день" />
-                <TextBox Text="{Binding DayPrice,  UpdateSourceTrigger=PropertyChanged}" />
-                </StackPanel>
-            </Grid>
-            <Button Grid.Row="1"
+                        <TextBlock Text="Номер" />
+                        <TextBox  MaxLength="20" Text="{Binding Path= Number, UpdateSourceTrigger=PropertyChanged, Mode = TwoWay}" />
+                        <TextBlock Text="Модель" />
+                        <TextBox MaxLength="20" Text="{Binding Model,  UpdateSourceTrigger=PropertyChanged}" />
+                        <TextBlock Text="Цвет" />
+                        <TextBox MaxLength="20" Text="{Binding Color,  UpdateSourceTrigger=PropertyChanged}" />
+                        <TextBlock Text="Год выпуска" />
+                        <TextBox MaxLength="20" Text="{Binding DateRelease,  UpdateSourceTrigger=PropertyChanged}" />
+                        <TextBlock Text="Цена аренды за день" />
+                        <TextBox MaxLength="20" Text="{Binding DayPrice,  UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                </Grid>
+                <Button Grid.Row="1"
                     Grid.Column="0"  
                     Height="30"
                     Command="{Binding Path=AddNew}"
                     Content="{Binding Path=ButtonContent}"  />
-            <Button Grid.Row="1" 
+                <Button Grid.Row="1" 
                     Grid.Column="1" 
                     Height="30"
                     Command="{Binding Path=Remove}" 
                     CommandParameter="{Binding SelectedCar}" 
                     Content="Remove"/>
+            </Grid>
         </Grid>
-    </Grid>
+        </TabItem>
+        <TabItem Header="Clients"  DataContext="{Binding Children[1]}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <ListBox Grid.Column="0" 
+                 ItemsSource="{Binding Path =Clients}"
+                 SelectedItem="{Binding Path =SelectedClient, Mode = TwoWay}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = Name}" />
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = LastName  }" />
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = SecondLastName }" />
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = BDay}" />
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = NumberDriversLicence}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <Grid Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Grid.Column="0" ColumnSpan="2" >
+                        <StackPanel Orientation="Vertical" 
+                            Margin="5">
+                            <TextBlock  Text="Имя" />
+                            <TextBox  MaxLength="20" Text="{Binding Path= Name, UpdateSourceTrigger=PropertyChanged, Mode = TwoWay}" />
+                            <TextBlock Text="Фамилия" />
+                            <TextBox MaxLength="20" Text="{Binding LastName,  UpdateSourceTrigger=PropertyChanged}" />
+                            <TextBlock Text="Отчество" />
+                            <TextBox MaxLength="20" Text="{Binding SecondLastName,  UpdateSourceTrigger=PropertyChanged}" />
+                            <TextBlock Text="Дата рождения" />
+                            <TextBox MaxLength="20" Text="{Binding BDay,  UpdateSourceTrigger=PropertyChanged}" />
+                            <TextBlock Text="Номер водительского удостоверения" />
+                            <TextBox MaxLength="20" Text="{Binding NumberDriversLicence,  UpdateSourceTrigger=PropertyChanged}" />
+                        </StackPanel>
+                    </Grid>
+                    <Button Grid.Row="1"
+                    Grid.Column="0"  
+                    Height="30"
+                    Command="{Binding Path=AddNew}"
+                    Content="{Binding Path=ButtonContentClient}"  />
+                    <Button Grid.Row="1" 
+                    Grid.Column="1" 
+                    Height="30"
+                    Command="{Binding Path=Remove}" 
+                    CommandParameter="{Binding SelectedClient}" 
+                    Content="Remove"/>
+                </Grid>
+            </Grid>
+        </TabItem>
+        <TabItem Header="Managers"  DataContext="{Binding Children[2]}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <ListBox Grid.Column="0" 
+                 ItemsSource="{Binding Path = Managers}"
+                 SelectedItem="{Binding Path = SelectedManager, Mode = TwoWay}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = Name}" />
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = LastName  }" />
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = SecondLastName }" />
+                                <TextBlock Padding="0,0,2,0" Text="{Binding Path = BDay}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <Grid Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Grid.Column="0" ColumnSpan="2" >
+                        <StackPanel Orientation="Vertical" 
+                            Margin="5">
+                            <TextBlock Text="Имя" />
+                            <TextBox  MaxLength="20" Text="{Binding Path= Name, UpdateSourceTrigger=PropertyChanged, Mode = TwoWay}" />
+                            <TextBlock Text="Фамилия" />
+                            <TextBox MaxLength="20" Text="{Binding LastName,  UpdateSourceTrigger=PropertyChanged}" />
+                            <TextBlock Text="Отчество" />
+                            <TextBox MaxLength="20" Text="{Binding SecondLastName,  UpdateSourceTrigger=PropertyChanged}" />
+                            <TextBlock Text="Дата рождения" />
+                            <TextBox MaxLength="20" Text="{Binding BDay,  UpdateSourceTrigger=PropertyChanged}" />
+                        </StackPanel>
+                    </Grid>
+                    <Button Grid.Row="1"
+                    Grid.Column="0"  
+                    Height="30"
+                    Command="{Binding Path=AddNew}"
+                    Content="{Binding Path=ButtonContent}"  />
+                    <Button Grid.Row="1" 
+                    Grid.Column="1" 
+                    Height="30"
+                    Command="{Binding Path=Remove}" 
+                    CommandParameter="{Binding SelectedManager}" 
+                    Content="Remove"/>
+                </Grid>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
